# SIRF

./: .clang-format  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  a.out
crates/sirf_builder/: Cargo.toml
crates/sirf_builder/src/: lib.rs
crates/sirf_cli/: Cargo.toml
crates/sirf_cli/src/: main.rs
crates/sirf_codegen/: Cargo.toml
crates/sirf_core/: Cargo.toml
crates/sirf_core/src/: diagnostics.rs  expr.rs  expression.rs  intern_table.rs  lib.rs  module.rs  node.rs  statement.rs  symbol_table.rs  types.rs
crates/sirf_parser/: Cargo.toml
crates/sirf_parser/src/: lexer.rs  lib.rs  parser.rs
crates/sirf_utils/: Cargo.toml
crates/sirf_utils/src/: lib.rs
include/SIRF/: IRBuilder.hpp  SIRF.hpp
include/SIRF/Asm/: AsmGen.hpp
include/SIRF/Core/: APIConfig.hpp  Common.hpp
include/SIRF/IR/: IrAnalyzer.hpp  IrAttribute.hpp  IrDeclaration.hpp  IrHolder.hpp  IrInstruction.hpp  IrStmtAssign.hpp  IrStmtBase.hpp  IrStmtDeclaration.hpp  IrStmtFunction.hpp  IrStmtInstruction.hpp  IrStmtLabel.hpp  IrTypeBase.hpp  IrTypeBitfield.hpp  IrTypeNamed.hpp  IrTypePtr.hpp  IrTypeSized.hpp  IrValueBase.hpp  IrValueLabel.hpp  IrValueLiteral.hpp  IrValuePtr.hpp  IrValueRegister.hpp  IrValueSSA.hpp  IrValueSymbol.hpp
include/libsirf/: AsmGen.hpp  IrAnalyzer.hpp  IrHolder.hpp  IrTypes.hpp  IrValues.hpp
include/libsirf/Asm/: AsmGen.hpp
include/libsirf/Core/: APIMacros.hpp  Common.hpp
include/libsirf/IR/: IrAnalyzer.hpp  IrAttribute.hpp  IrHolder.hpp  IrStmtAssign.hpp  IrStmtBase.hpp  IrStmtDeclaration.hpp  IrStmtFunction.hpp  IrStmtInstruction.hpp  IrStmtLabel.hpp  IrStmts.hpp  IrTypeBase.hpp  IrTypeNamed.hpp  IrTypePtr.hpp  IrTypeSized.hpp  IrValueBase.hpp  IrValueLabel.hpp  IrValueLiteral.hpp  IrValuePtr.hpp  IrValueRegister.hpp  IrValueSSA.hpp  IrValueSymbol.hpp  IrValues.hpp
libsirf/: APIMacros.hpp  AsmGen.cpp  AsmGen_x86_64.cpp  Common.hpp  Config.hpp  IrAnalyzer.cpp  IrAttribute.cpp  IrAttribute.hpp  IrStmtAssign.cpp  IrStmtAssign.hpp  IrStmtBase.hpp  IrStmtData.cpp  IrStmtData.hpp  IrStmtDeclaration.cpp  IrStmtDeclaration.hpp  IrStmtFunction.cpp  IrStmtFunction.hpp  IrStmtInstruction.cpp  IrStmtInstruction.hpp  IrStmtLabel.cpp  IrStmtLabel.hpp  IrTypeBase.hpp  IrTypeNamed.cpp  IrTypeNamed.hpp  IrTypePtr.cpp  IrTypePtr.hpp  IrTypeSized.cpp  IrTypeSized.hpp  IrValueBase.hpp  IrValueLabel.cpp  IrValueLabel.hpp  IrValueLiteral.cpp  IrValueLiteral.hpp  IrValuePtr.cpp  IrValuePtr.hpp  IrValueRegister.cpp  IrValueRegister.hpp  IrValueSSA.cpp  IrValueSSA.hpp  IrValueSymbol.cpp  (+1 more)
scripts/: run_tests.py
sirfc/: CState.hpp  IrLexer.cpp  IrLexer.hpp  IrParser.cpp  IrParser.hpp  main.cpp
src/: AsmGen.cpp  AsmGen_x86_64.cpp  IrAnalyzer.cpp  IrAttribute.cpp  IrDeclaration.cpp  IrInstruction.cpp  IrStmtAssign.cpp  IrStmtDeclaration.cpp  IrStmtFunction.cpp  IrStmtInstruction.cpp  IrStmtLabel.cpp  IrTypeNamed.cpp  IrTypePtr.cpp  IrTypeSized.cpp  IrValueBase.cpp  IrValueLabel.cpp  IrValueLiteral.cpp  IrValuePtr.cpp  IrValueRegister.cpp  IrValueSSA.cpp  IrValueSymbol.cpp
tests/: 00_hello_world.out  00_hello_world.sirf  10_add.sirf  test.s  test.sirf  test_0.sirf  test_1.s  test_1.sirf  test_1.sirf.s
